potential fix: set Supervisor priorities to ensure Gunicorn starts before nginx to prevent 502 errors

--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -4,7 +4,10 @@ nodaemon=true
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 autorestart=true
+priority=20
 
 [program:gunicorn]
 command=/code/entrypoint.sh
 autorestart=true
+priority=10
+startsecs=5
