fix supervisor logging

--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -4,10 +4,13 @@ nodaemon=true
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 autorestart=true
-priority=20
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:gunicorn]
 command=/code/entrypoint.sh
 autorestart=true
-priority=10
-startsecs=5
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
