Add Google Maps API integration for geocoding and reverse geocoding functionality

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -22,6 +22,8 @@ EMAIL_BACKEND='console'
 # EMAIL_HOST_PASSWORD='password'
 # DEFAULT_FROM_EMAIL='user@example.com'
 
+# GOOGLE_MAPS_API_KEY='key'
+
 
 # ------------------- #
 # For Developers to start a Demo Database
