Refactor environment variable names in .env.example and settings.py for consistency; add install script for streamlined setup

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ BODY_SIZE_LIMIT=Infinity
 
 # 🐘 PostgreSQL Database
 PGHOST=db
-PGDATABASE=database
-PGUSER=adventure
-PGPASSWORD=changeme123
+POSTGRES_DB=database
+POSTGRES_USER=adventure
+POSTGRES_PASSWORD=changeme123
 
 # 🔒 Django Backend
 SECRET_KEY=changeme123
