Update .env.example with additional optional configurations and change docker-compose to use development images for frontend and backend services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    image: ghcr.io/seanmorley15/adventurelog-frontend:latest
+    image: ghcr.io/seanmorley15/adventurelog-frontend:development
     container_name: adventurelog-frontend
     restart: unless-stopped
     env_file: .env
@@ -18,7 +18,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
   server:
-    image: ghcr.io/seanmorley15/adventurelog-backend:latest
+    image: ghcr.io/seanmorley15/adventurelog-backend:development
     container_name: adventurelog-backend
     restart: unless-stopped
     env_file: .env
