--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,27 @@ CSRF_TRUSTED_ORIGINS=http://localhost:8016,http://localhost:8015
 DEBUG=False
 FRONTEND_URL=http://localhost:8015 # Used for email generation. This should be the url of the frontend
 
-# 🗺️ Optional
-# GOOGLE_MAPS_API_KEY=your_google_maps_api_key # https://adventurelog.app/docs/configuration/google_maps_integration.html
+# Optional: use Google Maps integration
+# https://adventurelog.app/docs/configuration/google_maps_integration.html
+# GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+# Optional: disable registration
+# https://adventurelog.app/docs/configuration/disable_registration.html
+# DISABLE_REGISTRATION=True
+# DISABLE_REGISTRATION_MESSAGE=Registration is disabled for this instance of AdventureLog.
+
+# Optional: Use email
+# https://adventurelog.app/docs/configuration/email.html
+# EMAIL_BACKEND=email
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_USE_TLS=True
+# EMAIL_PORT=587
+# EMAIL_USE_SSL=False
+# EMAIL_HOST_USER=user
+# EMAIL_HOST_PASSWORD=password
+# DEFAULT_FROM_EMAIL=user@example.com
+
+# Optional: Use Umami for analytics
+# https://adventurelog.app/docs/configuration/analytics.html
+# PUBLIC_UMAMI_SRC=https://cloud.umami.is/script.js # If you are using the hosted version of Umami
+# PUBLIC_UMAMI_WEBSITE_ID=
