Enhance dynamic port handling in installer and configuration files; update .env.example and docker-compose.yml to use environment variables for frontend and backend ports.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 PUBLIC_SERVER_URL=http://server:8000 # Should be the service name of the backend with port 8000, even if you change the port in the backend service
 ORIGIN=http://localhost:8015
 BODY_SIZE_LIMIT=Infinity
+FRONTEND_PORT=8015
 
 # 🐘 PostgreSQL Database
 PGHOST=db
@@ -18,6 +19,7 @@ PUBLIC_URL=http://localhost:8016 # Match the outward port, used for the creation
 CSRF_TRUSTED_ORIGINS=http://localhost:8016,http://localhost:8015
 DEBUG=False
 FRONTEND_URL=http://localhost:8015 # Used for email generation. This should be the url of the frontend
+BACKEND_PORT=8016
 
 # Optional: use Google Maps integration
 # https://adventurelog.app/docs/configuration/google_maps_integration.html
