fix: update location blocks for protected media in nginx configuration

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -30,10 +30,9 @@ http {
         }
         
         # Special handling for PDF files with CSP headers
-        location ~ ^/protectedMedia/.*\.pdf$ {
+        location ~ ^/protectedMedia/(.*)\.pdf$ {
             internal;
-            alias /code/media/;
-            try_files $uri =404;
+            alias /code/media/$1.pdf;
             add_header Content-Security-Policy "default-src 'self'; script-src 'none'; object-src 'none'; base-uri 'none'" always;
             add_header X-Content-Type-Options nosniff always;
             add_header X-Frame-Options SAMEORIGIN always;
@@ -41,10 +40,9 @@ http {
         }
         
         # General protected media files (non-PDF)
-        location /protectedMedia/ {
+        location ~ ^/protectedMedia/(.*)$ {
             internal;
-            alias /code/media/;
-            try_files $uri =404;
+            alias /code/media/$1;
         }
     }
 }
