fix: update environment configuration and improve installer output messages

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ BACKEND_PORT=8016
 
 # Optional: disable registration
 # https://adventurelog.app/docs/configuration/disable_registration.html
-# DISABLE_REGISTRATION=True
+DISABLE_REGISTRATION=False
 # DISABLE_REGISTRATION_MESSAGE=Registration is disabled for this instance of AdventureLog.
 
 # Optional: Use email
