--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,23 @@
 # Use the official Python slim image as the base image
-FROM python:3.10-slim
+FROM python:3.13-slim
 
-LABEL Developers="Sean Morley"
+# Metadata labels for the AdventureLog image
+LABEL maintainer="Sean Morley" \
+      version="v0.9.0" \
+      description="AdventureLog — the ultimate self-hosted travel companion." \
+      org.opencontainers.image.title="AdventureLog" \
+      org.opencontainers.image.description="AdventureLog is a self-hosted travel companion that helps you plan, track, and share your adventures." \
+      org.opencontainers.image.version="v0.9.0" \
+      org.opencontainers.image.authors="Sean Morley" \
+      org.opencontainers.image.url="https://raw.githubusercontent.com/seanmorley15/AdventureLog/refs/heads/main/brand/banner.png" \
+      org.opencontainers.image.source="https://github.com/seanmorley15/AdventureLog" \
+      org.opencontainers.image.vendor="Sean Morley" \
+      org.opencontainers.image.created="$(date -u +'%Y-%m-%dT%H:%M:%SZ')" \
+      org.opencontainers.image.licenses="GPL-3.0"
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # Set the working directory
 WORKDIR /code
