--- a/backend/server/requirements.txt
+++ b/backend/server/requirements.txt
@@ -4,13 +4,13 @@ django-allauth==0.63.3
 drf-yasg==1.21.4
 django-cors-headers==4.4.0
 coreapi==2.3.3
-python-dotenv
-psycopg2-binary
-Pillow
-whitenoise
-django-resized
-django-geojson
-setuptools<81
+python-dotenv==1.1.0
+psycopg2-binary==2.9.10
+pillow==11.2.1
+whitenoise==6.9.0
+django-resized==1.0.3
+django-geojson==4.2.0
+setuptools==79.0.1
 gunicorn==23.0.0
 qrcode==8.0
 slippers==0.6.2
