chore: update version to v0.10.0 across Dockerfiles, package.json, and configuration files; add changelog for v0.10.0 release

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     #build: ./frontend/
-    image: ghcr.io/seanmorley15/adventurelog-frontend:beta
+    image: ghcr.io/seanmorley15/adventurelog-frontend:latest
     container_name: adventurelog-frontend
     restart: unless-stopped
     env_file: .env
@@ -20,7 +20,7 @@ services:
 
   server:
     #build: ./backend/
-    image: ghcr.io/seanmorley15/adventurelog-backend:beta
+    image: ghcr.io/seanmorley15/adventurelog-backend:latest
     container_name: adventurelog-backend
     restart: unless-stopped
     env_file: .env
