Refactor UI components for improved localization and styling
- Updated various headings and text elements to utilize localization functions for better internationalization support.
- Simplified gradient styles in headings to enhance readability.
- Adjusted adventure and travel statistics sections to reflect localized titles and descriptions.
- Enhanced filter options and buttons with localized text for clarity.
- Modified Tailwind CSS configuration to include a new color 'dim' for future styling needs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,16 @@
     "backend/server/backend/lib/python3.12/site-packages/django/contrib/sites/locale",
     "backend/server/backend/lib/python3.12/site-packages/rest_framework/templates/rest_framework/docs/langs"
   ],
-  "i18n-ally.keystyle": "nested"
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.keysInUse": [
+    "navbar.themes.dim",
+    "navbar.themes.northernLights",
+    "navbar.themes.aqua",
+    "navbar.themes.aestheticDark",
+    "navbar.themes.aestheticLight",
+    "navbar.themes.forest",
+    "navbar.themes.night",
+    "navbar.themes.dark",
+    "navbar.themes.light"
+  ]
 }
