--- a/.github/workflows/frontend-test.yml
+++ b/.github/workflows/frontend-test.yml
@@ -4,8 +4,19 @@ permissions:
   contents: read
 
 on:
-  pull_request:
   push:
+    branches:
+      - main
+      - development
+    paths:
+      - "frontend/**"
+
+  pull_request:
+    branches:
+      - main
+      - development
+    paths:
+      - "frontend/**"
 
 jobs:
   build:
