--- a/.github/workflows/trivy_security_scans.yml
+++ b/.github/workflows/trivy_security_scans.yml
@@ -5,10 +5,18 @@ on:
     branches:
       - main
       - development
+    paths:
+      - "backend/**"
+      - "frontend/**"
+
   pull_request:
     branches:
       - main
       - development
+    paths:
+      - "backend/**"
+      - "frontend/**"
+
   schedule:
     - cron: "0 8 * * 1" # Weekly scan on Mondays at 8 AM UTC
 
