fix(workflows): add missing severity parameter for Docker image scans in Trivy workflow

--- a/.github/workflows/trivy_security_scans.yml
+++ b/.github/workflows/trivy_security_scans.yml
@@ -63,6 +63,7 @@ jobs:
           format: table
           exit-code: 1
           ignore-unfixed: true
+          severity: CRITICAL,HIGH,MEDIUM
 
       - name: Scan frontend Docker image with Trivy
         uses: aquasecurity/trivy-action@master
@@ -71,3 +72,4 @@ jobs:
           format: table
           exit-code: 1
           ignore-unfixed: true
+          severity: CRITICAL,HIGH,MEDIUM
