feat(devsecops): updated installer to utilize new docker-compose format

--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,17 @@ BODY_SIZE_LIMIT=Infinity
 
 # 🐘 PostgreSQL Database
 PGHOST=db # Supposed to match the host of the postgis database
-POSTGRES_DB=adventureloga
+POSTGRES_DB=adventurelog
 POSTGRES_USER=adventurelog
 POSTGRES_PASSWORD=changeme123
+# POSTGRES_PASSWORD_FILE=/run/secrets/postgres-password # Uncomment this block if you'd rather use docker secrets (more-secure)
 
 # 🔒 Django Backend
 SECRET_KEY=changeme123 # Replace with the actual secret key
+# SECRET_KEY_FILE=/run/secrets/secret-key # Uncomment this block if you'd rather use docker secrets (more-secure)
 DJANGO_ADMIN_USERNAME=admin # Replace with the actual admin username
-DJANGO_ADMIN_PASSWORD=admin  # Replace with the actual admin password
+DJANGO_ADMIN_PASSWORD=admin # Replace with the actual admin password
+# DJANGO_ADMIN_PASSWORD_FILE=/run/secrets/django-admin-password # Uncomment this block if you'd rather use docker secrets (more-secure)
 DJANGO_ADMIN_EMAIL=admin@example.com  # Replace with the actual admin email
 BACKEND_PORT=8016 # Don't forget to update CSRF_TRUSTED_ORIGINS and PUBLIC_URL in backend, and PUBLIC_SERVER_URL in frontend if you make changes to this.
 PUBLIC_URL=http://localhost:8016 # Replace with your domain where the backend is accessible publicly, used for the creation of image urls
@@ -33,6 +36,7 @@ FRONTEND_URL=http://localhost:8015 # Replace with your domain where the frontend
 # EMAIL_USE_SSL=True
 # EMAIL_HOST_USER=user
 # EMAIL_HOST_PASSWORD=password
+# # EMAIL_HOST_PASSWORD_FILE=/run/secrets/email-host-password # Uncomment this block if you'd rather use docker secrets (more-secure)
 # DEFAULT_FROM_EMAIL=adventurelog@example.com
 
 ## Google Maps: https://adventurelog.app/docs/configuration/google_maps_integration.html
