--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -13,6 +13,9 @@ FRONTEND_URL='http://localhost:3000'
 
 EMAIL_BACKEND='console'
 
+# STRAVA_CLIENT_ID=''
+# STRAVA_CLIENT_SECRET=''
+
 # EMAIL_BACKEND='email'
 # EMAIL_HOST='smtp.gmail.com'
 # EMAIL_USE_TLS=False
