--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -12,5 +12,13 @@ command=/code/entrypoint.sh
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes = 0
-stderr_logfile_maxbytes = 0
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[program:memcached]
+command=memcached -u nobody -m 64 -p 11211
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
