feat: add Strava and Wanderer integration documentation and configuration options

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,11 @@ DISABLE_REGISTRATION=False
 # EMAIL_HOST_PASSWORD=password
 # DEFAULT_FROM_EMAIL=user@example.com
 
+# Optional: Use Strava integration
+# https://adventurelog.app/docs/configuration/strava_integration.html
+# STRAVA_CLIENT_ID=your_strava_client_id
+# STRAVA_CLIENT_SECRET=your_strava_client_secret
+
 # Optional: Use Umami for analytics
 # https://adventurelog.app/docs/configuration/analytics.html
 # PUBLIC_UMAMI_SRC=https://cloud.umami.is/script.js # If you are using the hosted version of Umami
