--- a/.github/workflows/backend-beta.yml
+++ b/.github/workflows/backend-beta.yml
@@ -43,7 +43,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:beta
-            ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:beta
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:buildcache,mode=max
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:beta
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:beta
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
