--- a/.github/workflows/backend-beta.yml
+++ b/.github/workflows/backend-beta.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push beta Docker image with shared cache
+      - name: Build and push beta Docker image with BuildKit cache
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -45,5 +45,11 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:beta
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:beta
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+          cache-from: |
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:buildcache
+            type=local,src=/tmp/.buildx-cache
+          cache-to: |
+            type=registry,ref=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+            type=local,dest=/tmp/.buildx-cache,mode=max
+        env:
+          DOCKER_BUILDKIT: 1
