fix: Update workflow files to include permissions for GitHub Actions

--- a/.github/workflows/cdn-beta.yml
+++ b/.github/workflows/cdn-beta.yml
@@ -1,5 +1,9 @@
 name: Upload beta CDN image to GHCR and Docker Hub
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches:
