--- a/.github/workflows/backend-beta.yml
+++ b/.github/workflows/backend-beta.yml
@@ -1,5 +1,9 @@
 name: Upload beta backend image to GHCR and Docker Hub
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches:
