--- a/.github/workflows/cdn-latest.yml
+++ b/.github/workflows/cdn-latest.yml
@@ -1,5 +1,9 @@
 name: Upload latest CDN image to GHCR and Docker Hub
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches:
