--- a/.github/workflows/frontend-latest.yml
+++ b/.github/workflows/frontend-latest.yml
@@ -1,5 +1,9 @@
 name: Upload latest frontend image to GHCR and Docker Hub
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches:
@@ -29,18 +33,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: set lower case owner name
         run: |
           echo "REPO_OWNER=${OWNER,,}" >>${GITHUB_ENV}
         env:
-          OWNER: '${{ github.repository_owner }}'
+          OWNER: "${{ github.repository_owner }}"
 
       - name: Build Docker images
         run: docker buildx build --platform linux/amd64,linux/arm64 --push -t ghcr.io/$REPO_OWNER/$IMAGE_NAME:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest ./frontend
