--- a/.github/workflows/frontend-release.yml
+++ b/.github/workflows/frontend-release.yml
@@ -1,5 +1,9 @@
 name: Upload tagged release frontend image to GHCR and Docker Hub
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   release:
     types: [released]
