--- a/.github/workflows/trivy_security_scans.yml
+++ b/.github/workflows/trivy_security_scans.yml
@@ -1,5 +1,8 @@
 name: Trivy Security Scans
 
+permissions:
+  contents: read # Minimal permissions needed for scanning source and images
+
 on:
   push:
     branches:
@@ -42,7 +45,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Optional login step (remove if you're not pushing images to GHCR)
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
