[BUG]Ordered Itinerary includes visits that are outside itinerary date range Fixes #746

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -36,4 +36,8 @@ EMAIL_BACKEND='console'
 # PGDATABASE='adventurelog'
 # PGUSER='admin'
 # PGPASSWORD='admin'
+
+# For Sean's use:
+# re-sync the development branch with main after doing squash merges
+# git fetch origin && git checkout development && git reset --hard origin/main && git push origin development --force
 # ------------------- #
