[BUG] Location Visit End Date not affected by Location Timezone Fixes #843

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -37,7 +37,11 @@ EMAIL_BACKEND='console'
 # PGUSER='admin'
 # PGPASSWORD='admin'
 
-# For Sean's use:
-# re-sync the development branch with main after doing squash merges
+# ------ For Sean's use: ----- #
+# Re-sync the development branch with main after doing squash merges
 # git fetch origin && git checkout development && git reset --hard origin/main && git push origin development --force
+
+# Pull and merge weblate changes
+# git remote update weblate;
+# git merge weblate/development;
 # ------------------- #
