Update issue templates for bug reports, deployment issues, and feature requests

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -42,6 +42,6 @@ EMAIL_BACKEND='console'
 # git fetch origin && git checkout development && git reset --hard origin/main && git push origin development --force
 
 # Pull and merge weblate changes
-# git remote update weblate;
-# git merge weblate/development;
+# git fetch weblate
+# git merge --squash weblate/development
 # ------------------- #
