--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -39,6 +39,8 @@ EMAIL_BACKEND='console'
 
 # ------ For Sean's use: ----- #
 # Re-sync the development branch with main after doing squash merges
+# ------ For Sean's use: ----- #
+# Re-sync the development branch with main after doing squash merges
 # git fetch origin && git checkout development && git reset --hard origin/main && git push origin development --force
 
 # Pull and merge weblate changes
