Fixes [REQUEST] Email-based auto-linking for OIDC Fixes #921

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -27,6 +27,8 @@ EMAIL_BACKEND='console'
 
 # GOOGLE_MAPS_API_KEY='key'
 
+# ACCOUNT_EMAIL_VERIFICATION='none'  # 'none', 'optional', 'mandatory' # You can change this as needed for your environment
+
 
 # ------------------- #
 # For Developers to start a Demo Database
